# server/internal/controller/ssh.go
@@ -1,0 +1,40 @@
+package controller
+
+import (
+	"fqhWeb/internal/service"
+	"fqhWeb/pkg/api"
+	"fqhWeb/pkg/logger"
+
+	"github.com/gin-gonic/gin"
+)
+
+// TestSSH
+// @Tags SSH相关
+// @title 测试SSH命令执行
+// @description 传入SSH命令所需参数
+// @Summary 测试SSH命令执行
+// @Produce  application/json
+// @Param Authorization header string true "格式为：Bearer 用户令牌"
+// @Param data body api.TestSSHReq true "传入所需id"
+// @Success 200 {} string "{"data":{},"meta":{msg":"Success"}}"
+// @Failure 500 {string} string "{"data":{}, "meta":{"msg":"错误信息", "error":"错误格式输出(如存在)"}}"
+// @Router /api/v1/ssh/testSSH [post]
+func TestSSH(c *gin.Context) {
+	var param api.TestSSHReq
+	if err := c.ShouldBind(&param); err != nil {
+		c.JSON(500, api.ErrorResponse(err))
+		return
+	}
+	data, err := service.SSH().TestSSH(param)
+	if err != nil {
+		logger.Log().Error("SSH", "测试执行失败", err)
+		c.JSON(500, api.Err("测试执行失败", err))
+		return
+	}
+	c.JSON(200, api.Response{
+		Data: data,
+		Meta: api.Meta{
+			Msg: "Success",
+		},
+	})
+}
